# 1.00.00 (67114) Aug 19, 2012
# 0.00.60 (67112) Aug 19, 2012
"Young Oceanic Crust" labels are always added on rift zones
# 0.00.59 (67105) Aug 18, 2012
Fixed center-of-earth temperature bug
# 0.00.58 (67101) Aug 17, 2012
"Young Oceanic Crust" label will now appear on crust created next to old oceanic crust (not just continental crust)
Fixed temperature anomaly between ocean floor and water
Added "Error" dialog for startup failures
Vertical angle of the "blue transform" arrows lowered for the "front" direction
Added in "New Crust" button that resets the model but leaves all of the view controls intact
# 0.00.57 (67024) Aug 15, 2012
Added "Reset All" button to the Crust (1st) tab
# 0.00.56 (66990) Aug 14, 2012
Dropping a sensor / tool outside of the screen causes it to be brought back into the toolbox
Fixed inner core boundary temperature
Fixed thermometer so it doesn't "bottom out" at 0 C (correctly shows air temperature now)
# 0.00.55 (66877) Aug 13, 2012
Resize time control panel when in manual mode
The handle arrows are now clickable and can control the animation
Handle arrows' vertical angles match the local earth curvature
Handle arrows moved closer to the handle itself
Flipped label light/dark for the "Both" coloring mode
Refined the time control panel (will now disable controls once the time limit is reached)
Fixed crash behavior with the Density Meter
# 0.00.54 (66778) Aug 9, 2012
# 0.00.53 (66755) Aug 9, 2012
Allowing software fallback (no debug flag)
# 0.00.52 (66753) Aug 9, 2012
Allowing software fallback + debug flag
# 0.00.51 (66752) Aug 9, 2012
Back to normal graphics settings
# 0.00.50 (66751) Aug 9, 2012
Debugging version without antialiasing and with reduced depth buffer precision
# 0.00.49 (66750) Aug 9, 2012
Debugging version without antialiasing
# 0.00.48 (66746) Aug 9, 2012
Multiple bug fixes (crashing and/or slowness)
# 0.00.47 (65618) Jul 2, 2012
Fixed tool drag areas and drag handling