@@ -50,3 +50,7 @@ toolbox=Toolbox
 zoom=Zoom
 
 legend=Legend
+
+convergent=Convergent
+divergent=Divergent
+transform=Transform
