@@ -1,3 +1,4 @@
+> Internationalization fix for Convergent, Divergent and Transform
 # 1.00.00 (67114) Aug 19, 2012
 # 0.00.60 (67112) Aug 19, 2012
 "Young Oceanic Crust" labels are always added on rift zones
